methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:6: error: ';' expected but integer literal found.
    println 2;
            ^