methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var rep = false;
  println(1);
  if (!estFaceMur()) {
    println 2;
    avance()
    if (getCouleurSol()==Color.green) {
      var rep = true
    }
    recule()
  }
  return rep
}